--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
+                <!--NOTE for some reason wrap-content removes the lines, remember to change it in
+                layout/card_uml_table.xml if you change the width -->
+                <include
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="175dp"
+                    android:id="@+id/includeTest"
+                    android:layout_height="wrap_content"
+                    layout="@layout/card_uml_table"/>
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </HorizontalScrollView>
