--- a/app/src/main/res/layout/card_uml_table_row.xml
+++ b/app/src/main/res/layout/card_uml_table_row.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/text"
         android:padding="8dp"
+        android:textSize="12sp"
         android:paddingStart="12dp"
         android:paddingEnd="8dp"
         android:textColor="@color/white"
