--- a/app/src/main/res/layout/card_uml_table_row.xml
+++ b/app/src/main/res/layout/card_uml_table_row.xml
@@ -11,8 +11,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/text"
         android:padding="8dp"
-        android:textSize="12sp"
-        android:paddingStart="12dp"
+        android:textSize="13sp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:paddingStart="13dp"
         android:paddingEnd="8dp"
         android:textColor="@color/white"
         android:alpha=".8"
