--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="black80">#55000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whiteAA">#AAFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
     <color name="transparent">#00000000</color>
