--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="black80">#55000000</color>
+    <color name="black20">#55000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black80">#333333</color>
     <color name="whiteAA">#AAFFFFFF</color>
-    <color name="gray">#656565</color>
+    <color name="gray">#404040</color>
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
     <color name="transparent">#00000000</color>
